# google-books-api-wrapper

./: .buildinfo  .coveragerc  .gitignore  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  run.py  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: documentation.yaml  publish.yaml  testing.yaml
docs/source/: conf.py  index.rst
google_books_api_wrapper/: _rest_adapter.py  api.py  constants.py  exceptions.py  models.py  rest_adapter.py
google_books_wrapper/: api.py  models.py  rest_adapter.py
tests/: conftest.py
tests/data/: valid_get_book_response.json
tests/unit/: test_api.py  test_models.py  test_rest_adapter.py
tests/utils/: file_reader.py
