[tool.poetry]
name = "google-books-api-wrapper"
version = "0.1.0"
description = "A simple and easy to use wrapper around the Google Books Web API"
authors = ["dankrzeminski32 <dankrzeminski32@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "google_books_api_wrapper"}]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.poetry.dependencies]
python = "^3.9"
certifi = "2022.12.7"
charset-normalizer = "3.0.1"
idna = "3.4"
requests = "2.28.2"
urllib3 = "1.26.14"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
requests-mock = "^1.10.0"
pytest = "^7.2.1"
coverage = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
