[tool.poetry]
name = "google-books-api-wrapper"
version = "1.0.3"
description = "A simple and easy to use wrapper around the Google Books Web API."
authors = ["dankrzeminski32 <dankrzeminski32@gmail.com>"]
license = "MIT"
homepage = "https://github.com/dankrzeminski32/google-books-api-wrapper"
documentation = "https://dankrzeminski32.github.io/google-books-api-wrapper/"
readme = "README.md"
packages = [{include = "google_books_api_wrapper"}]
[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.poetry.dev-dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
pytest = "^7.2.1"
coverage = "^7.1.0"
responses = "^0.22.0"


[tool.poetry.dependencies]
python = "^3.10"
certifi = "2022.12.7"
charset-normalizer = "3.0.1"
idna = "3.4"
requests = "2.28.2"
urllib3 = "1.26.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
